# MFSocket

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: app.aab
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 3d.cpp  channel_groups.cpp  common.cpp  common.h  common_platform.cpp  common_platform.h  convolution_reverb.cpp  dsp_custom.cpp  dsp_effect_per_speaker.cpp  dsp_inspector.cpp  effects.cpp  gapless_playback.cpp  generate_tone.cpp  granular_synth.cpp  load_from_memory.cpp  multiple_speaker.cpp  multiple_system.cpp  net_stream.cpp  play_sound.cpp  play_stream.cpp  record.cpp  record_enumeration.cpp  user_created_sound.cpp
app/src/main/java/com/Android/MFSocketcom/Android/MFSocket/: MFSocket.java
app/src/main/java/org/fmod/core/: FmodUtils.java
app/src/main/java/org/fmod/example/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libfmod/: CMakeLists.txt  README.md  build.gradle
libfmod/src/main/: AndroidManifest.xml
libfmod/src/main/cpp/: org_fmod_core_FmodUtils.h  org_fmod_core_FmodUtils_Effect.h  play_sound.cpp  record_to_disk.cpp
libfmod/src/main/cpp/inc/: fmod_common.h
libfmod/src/main/java/org/fmod/core/: FmodUtils.java
libfmod/src/main/res/values/: strings.xml
liblame/: CMakeLists.txt  README.md  build.gradle  project.properties
liblame/src/main/: AndroidManifest.xml
liblame/src/main/cpp/: MP3Recorder.c  MP3Recorder.h
liblame/src/main/cpp/lame/: encoder.c  id3tag.c  lame.c  psymodel.c  quantize.c  quantize_pvt.c  takehiro.c  util.c  vbrquantize.c
liblame/src/main/java/com/android/liblame/: MP3Recorder.java
liblame/src/main/res/values/: strings.xml
librecord/: README.md  build.gradle
librecord/src/main/: AndroidManifest.xml
librecord/src/main/java/com/android/librecord/: AACEncode.java  AMREncode.java  AudioRecord.java  AudioRecordConfig.java  AudioRecordState.java  AudioTrack.java  AudioTrackState.java  FileUtil.java  MP3Encode.java  RecordState.java  WAVEncode.java
librecord/src/main/java/com/android/librecord/aac/: aac.java
librecord/src/main/java/com/android/librecord/amr/: amr.java
librecord/src/main/java/com/android/librecord/audio/: AudioRecordUtil.java  AudioTrackUtil.java
librecord/src/main/java/com/android/librecord/media/: MediaRecordUtil.java
librecord/src/main/java/com/android/librecord/mp3/: MP3RecordUtil.java  mp3.java
librecord/src/main/java/com/android/librecord/tailer/: Tailer.java.swp
librecord/src/main/java/com/android/librecord/wav/: AudioTrack.java  wav.java
librecord/src/main/res/values/: strings.xml
sample/: README.md  build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/tp/xmaihh/sample/: AudioRecorderActivity.java  AudioRecorderActivityPState.java  AudioTrackActivity.java  MainActivity.java  MediaRecorderActivity.java
sample/src/main/java/tp/xmaihh/sample/utils/: Uri2path.java
sample/src/main/res/layout/: activity_audio_recorder.xml  activity_audio_track.xml  activity_main.xml  activity_media_recorder.xml
sample/src/main/res/values/: strings.xml  styles.xml
(+2 files in other folders)
